--- a/SmartDoorLock/res/layout/activity_main.xml
+++ b/SmartDoorLock/res/layout/activity_main.xml
@@ -8,23 +8,71 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.commax.ble.door.service.MainActivity" >
 
-   
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
-        android:text="Start Smart Door Lock Service" />
- 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
         android:text="Stop Smart Door Lock Service" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/not_encryp_btn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="34dp"
+        android:text="Start Smart Door Lock Service" />
+
+    <Button
+        android:id="@+id/decryption_md5_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button2"
+        android:layout_below="@+id/encryption_md5_btn"
+        android:text="Decryption_md5" />
+
+    <Button
+        android:id="@+id/encryp_sha1_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/decryp_sha1_btn"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="24dp"
+        android:text="Encryption_SHA-256" />
+
+    <Button
+        android:id="@+id/encryption_md5_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_below="@+id/decryp_sha1_btn"
+        android:text="Encryption_md5" />
+
+    <Button
+        android:id="@+id/decryp_sha1_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/encryption_md5_btn"
+        android:layout_below="@+id/encryp_sha1_btn"
+        android:text="Decryption_SHA256" />
+
+    <Button
+        android:id="@+id/not_encryp_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/encryp_btn"
+        android:layout_below="@+id/encryp_btn"
+        android:text="Decryption_SHA1PRNG" />
+
+    <Button
+        android:id="@+id/encryp_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/decryption_md5_btn"
+        android:layout_below="@+id/decryption_md5_btn"
+        android:layout_marginTop="14dp"
+        android:text="Encryption_SHA1PRNG" />
 
 </RelativeLayout>
